Removed Collections Type from Backend. Regenerated SDK and installed in frontend.
