# dbrsdk-python/src/dbrsdk/models/collectiontype.py
@@ -1,13 +1,0 @@
-"""Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT."""
-
-from __future__ import annotations
-from enum import Enum
-
-
-class CollectionType(str, Enum):
-    r"""Collection type enumeration"""
-
-    PROJECT = "Project"
-    MOVE = "MOVE"
-    EPIC = "Epic"
-    RELEASE = "Release"
